--- a/glitchdotcom-dashboard-dark.user.css
+++ b/glitchdotcom-dashboard-dark.user.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name           Glitch.invert
-@namespace      idk
+@namespace      github:smashmaster:Glitchdotcomdashboarddark
 @version        1.0.0
 @description    Glitch.isDark = true
 @author         github:javaarchive
