--- a/glitchychristmas.user.css
+++ b/glitchychristmas.user.css
@@ -2,7 +2,7 @@
 @name           Glitchy Christmas
 @namespace      io.javaarchive.glitchdotcomchristmas
 @version        1.0.0
-@description    Have a wonderful Christmas
+@description    Have a wonderful Christmas of 2020, sorry this no longer works due to changes. 
 @author         javaarchive
 ==/UserStyle== */
 
