--- a/medium-anti-signin.user.css
+++ b/medium-anti-signin.user.css
@@ -1,8 +1,8 @@
 /* ==UserStyle==
 @name           medium.com No Sign In
-@namespace      OooB
+@namespace	ootb.no-medium-signin
 @version        1.0.0
-@description   OotB Userscript for blocking Google sign in prompts. Save some space!
+@description   OotB Userstyle for blocking Google sign in prompts. Save some space!
 @author         github:javaarchive
 ==/UserStyle== */
 
