--- a/aops-alcumus-adblock.user..css
+++ b/aops-alcumus-adblock.user..css
@@ -1,6 +1,10 @@
-/*
-AoPS Alcumus AdBlock
-*/
+/* ==UserStyle==
+@name           Alcumus AdBlock + Screen Real Estate
+@namespace      ootb.alcumus_adblock
+@version        1.0.0
+@description    Removes AoPS "Ready for more" advertisement and expands alcumus log.
+@author         Me
+==/UserStyle== */
 
 @-moz-document url-prefix("https://artofproblemsolving.com/alcumus") {
   .alc-log-panel > .aops-scroll-outer{
