--- a/aops-alcumus-no-format-tips.user.css
+++ b/aops-alcumus-no-format-tips.user.css
@@ -3,7 +3,7 @@
 @namespace      ootb.alcumus_noformattips
 @version        1.0.0
 @description    I think by this point you know how to format everything right?
-@author         Me
+@author         javaarchive
 ==/UserStyle== */
 
 @-moz-document url-prefix("https://artofproblemsolving.com/alcumus/problem") {
