--- a/aops-alcumus-adblock.user.css
+++ b/aops-alcumus-adblock.user.css
@@ -3,7 +3,7 @@
 @namespace      ootb.alcumus_adblock
 @version        1.0.0
 @description    Removes AoPS "Ready for more" advertisement and expands alcumus log.
-@author         javaarchive
+@author         github:javaarchive
 ==/UserStyle== */
 
 @-moz-document url-prefix("https://artofproblemsolving.com/alcumus") {
